<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation,MissingTranslation">HeroBook</string>

    <string name="playlistid">UCvC4D8onUfXzvjTOM-dBfEA</string>
    <string name="blur">Blur</string>
    <string name="summary_blur">Blur radius for images</string>    
    
    <string name="action_settings">Settings</string>
    <string name="heroes">Heroes</string>
    <string name="title_history">History</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="lessthanoneminuteago">less than 1 minute ago</string>
    <string name="daysago">%1s days ago</string>
    <string name="daysfromnow">%1s days from now</string>
    <string name="minutesfromnow">%1s minutes from now</string>
    <string name="minutesago">%1s minutes ago</string>
    <string name="hoursfromnow">%1s hours from now</string>
    <string name="hoursago">%1s hours ago</string>
    <string name="now">Now</string>
    <string name="title_activity_view_character">ViewCharacter</string>
    <string name="title_activity_view_comic">ViewComic</string>
	<string name="share">Share</string>
	<string name="info">Details</string>
	<string name="searching">Searching&#8230;</string>
	<string name="empty_description">No description</string>

	<string name="fullscreen">Fullscreen</string>
	<string name="page_footer">Data provided by Marvel. &#169;2014 Marvel</string>
	
    <string name="action_bookmark_added">Added %1s to bookmarks</string>
    <string name="action_bookmark_deleted">Removed %1s from bookmarks</string>
    
    
    <string name="exit">Exit</string>
    <string name="error">Error</string>
    <string name="error_startup">Unable to initialize application.</string>
    
    <string name="link_details">Read more @Marvel.com</string>
    <string name="link_purchase">Purchase</string>
    <string name="link_reader">Reader</string>
    <string name="link_inapplink">App Link</string>
    <string name="link_unknown">Marvel.com (%1s)</string>
    
    <string name="title_refreshrate">Minimum Display Time</string>
    <string name="summary_refreshrate">The minimum amount of time that a photo will display.</string>
    <string name="dialog_title_refreshrate">Select a time</string>    
    
    <string name="settings">Settings</string>
    
</resources>
